--- a/network_editor/templates/network_editor/base.html
+++ b/network_editor/templates/network_editor/base.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    {% load staticfiles %}
-    {% load compile_static %}
-    {% load static %}
+{% load staticfiles %}
+{% load compile_static %}
+{% load static %}
 
-    <script type="text/javascript" src="{% static 'static_jquery/js/jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'static_jquery/js/jquery.js' %}"></script>
 
-    {% load bootstrap3 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
-    <link rel="stylesheet" href="{% static 'sass/application.scss'|compile %}" />
+<link rel="stylesheet" href="{% static 'sass/application.scss'|compile %}"/>
 
-    <title>{% block title %}My amazing site{% endblock %}</title>
+<title>{% block title %}NPMT{% endblock %}</title>
 </head>
 
-<body>
-    {% include "network_editor/header.html" %}
+<body class="network-editor">
+{% include "network_editor/header.html" %}
 
-    {% block header %}
-    {% endblock %}
+{% block header %}
+{% endblock %}
 
-    <div id="sidebar">
-        {% block sidebar %}
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/blog/">Blog</a></li>
-        </ul>
-        {% endblock %}
-    </div>
+<div class="container-fluid">
+{% block content %}{% endblock %}
+</div>
 
-    <div id="content">
-        {% block content %}{% endblock %}
-    </div>
 </body>
 </html>
