--- a/network_editor/templates/network_editor/index.html
+++ b/network_editor/templates/network_editor/index.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-sm-12" id="controls">
             <div class="btn-group" role="group" aria-label="network-editor-controls">
-                <button type="button" class="btn btn-default" id="add-node">Add Node</button>
+                <button type="button" class="btn btn-default active" id="add-node">Add Node</button>
                 <button type="button" class="btn btn-default" id="add-edge">Add Edge</button>
             </div>
         </div>
