--- a/network_editor/templates/network_editor/index.html
+++ b/network_editor/templates/network_editor/index.html
@@ -18,12 +18,8 @@
             {% block sidebar %}
                 <div class="nodes-container">
                     <h3>Nodes</h3>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <span class="badge"><span class="node-id">1</span></span>
-                            <p>x: <span class="node-x">2.333</span></p>
-                            <p>y: <span class="node-y">5.999</span></p>
-                        </li>
+                    <ul class="list-group node-list">
+
                     </ul>
                 </div>
                 <div class="edges-container">
