--- a/network_editor/static/sass/content.scss
+++ b/network_editor/static/sass/content.scss
@@ -4,4 +4,18 @@
       height: 500px;
     }
   }
+
+  .node-list{
+    .node-list-item {
+      position: relative;
+      p {
+        margin-bottom: 0;
+      }
+      .delete-node {
+        position: absolute;
+        right: 8px;
+        top: 8px;
+      }
+    }
+  }
 }
