--- a/network_editor/static/sass/header.scss
+++ b/network_editor/static/sass/header.scss
@@ -1,3 +1,11 @@
+.navbar-brand {
+  padding: 5px 25px;
+  img {
+    height: 40px;
+    width: 40px;
+  }
+}
+
 .navbar, .navbar-default {
   background-color: black;
   border-color: black;
