--- a/network_editor/static/sass/application.scss
+++ b/network_editor/static/sass/application.scss
@@ -2,11 +2,16 @@
 @import "content";
 
 body {
-  .navbar-brand {
-    padding: 5px 25px;
-    img {
-      height: 40px;
-      width: 40px;
-    }
+
+  .truncate {
+    width: 60px;
+    height:15px;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .inline-block {
+    display: inline-block;
   }
 }
