Can save a network from the index page.

--- a/network_editor/templates/network_editor/base.html
+++ b/network_editor/templates/network_editor/base.html
@@ -27,6 +27,7 @@
 </div>
 
 <script type="text/javascript" src="{% static 'static_jquery/js/jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/lib/js.cookie.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/lib/mustache.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/mustache-templates.js' %}"></script>
 {% bootstrap_javascript %}
