--- a/network_editor/templates/network_editor/index.html
+++ b/network_editor/templates/network_editor/index.html
@@ -32,7 +32,7 @@
         <div class="col-sm-9" id="content">
 
             <div>
-                <label for="name">Name:</label> <input class='network-name' type="text" value="" placeholder="Enter network name">
+                <label for="name">Name:</label> <input class='network-name' type="text" value="{{ network }}" placeholder="Enter network name">
                 <label for="name">description:</label> <input class='network-description' type="text" value="" placeholder="Enter short description">
             </div>
             <div class="well well-lg map-container" id="map">
