Map gets loaded for a url. Need to add url to load modal and add update network functionality.

--- a/network_editor/templates/network_editor/base.html
+++ b/network_editor/templates/network_editor/base.html
@@ -35,6 +35,8 @@
 <script type="text/javascript" src="{% static 'leaflet/mercatorConverter.js' %}"></script>
 <script type="text/javascript" src="{% static 'leaflet/leafletembed.js' %}"></script>
 
+<script type="text/javascript" src="{% static 'javascripts/view-editor.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/network-loader.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/application.js' %}"></script>
 </body>
 </html>
