Added links to load a network.

--- a/network_editor/static/sass/content.scss
+++ b/network_editor/static/sass/content.scss
@@ -43,5 +43,8 @@
     max-height: 180px;
     overflow: auto;
   }
-
+  #load-network-modal .table-container {
+    max-height: 400px;
+    overflow: auto;
+  }
 }
