Improving looks of form.

--- a/network_editor/static/sass/content.scss
+++ b/network_editor/static/sass/content.scss
@@ -1,7 +1,9 @@
 .network-editor {
   #content {
+
     .map-container {
-      height: 450px;
+      margin-top: 10px;
+      height: 500px;
     }
   }
 
