Can edit a node, save and update a network reliably. Making asthetic changes.

--- a/network_editor/static/sass/content.scss
+++ b/network_editor/static/sass/content.scss
@@ -1,6 +1,7 @@
 .network-editor {
   #content {
-
+    background-color: white;
+    padding-top: 10px;
     .map-container {
       margin-top: 10px;
       height: 500px;
@@ -13,28 +14,37 @@
       p {
         margin-bottom: 0;
       }
-      .delete-node {
+      .delete-node, .edit-node {
         position: absolute;
         right: 8px;
         top: 8px;
+        width: 48px;
+      }
+      .edit-node {
+        top: 34px;
       }
     }
   }
   .edge-list {
     .edge-list-item {
       position: relative;
-      .delete-edge {
+      .delete-edge, .edit-edge {
         position: absolute;
         right: 8px;
         top: 8px;
+        width: 48px;
+      }
+      .edit-node {
+        top: 34px;
       }
     }
   }
 
   #sidebar {
+    padding-top: 10px;
     .list-title {
       width: 100px;
-      font-size:x-large;
+      font-size: x-large;
     }
     #add-node, #add-edge {
       margin-bottom: 10px;
