--- a/network_editor/templates/network_editor/base.html
+++ b/network_editor/templates/network_editor/base.html
@@ -22,7 +22,7 @@
 {% block header %}
 {% endblock %}
 
-<div class="container-fluid">
+<div class="container-fluid base-container">
     {% block content %}{% endblock %}
 </div>
 
