--- a/network_editor/templates/network_editor/header.html
+++ b/network_editor/templates/network_editor/header.html
@@ -12,8 +12,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/dtra_logo.png' %}" height="40px"
-                                                      width="40px" alt="npmt logo"></a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/dtra_logo.png' %}"
+                                                                     height="40px"
+                                                                     width="40px" alt="npmt logo"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,7 +23,8 @@
                     <li class="{% if active_tab == 'network_editor' %}active{% endif %}">
                         <a href="{% url 'network_editor:index' %}">Network Editor</a>
                     </li>
-                    <li class="{% if active_tab == 'fault_analyzer' %}active{% endif %}"><a href="#">Fault Analyzer</a>
+                    <li class="{% if active_tab == 'fault_analyzer' %}active{% endif %}">
+                        <a href="{% url 'fault_analyzer:index' %}">Fault Analyzer</a>
                     </li>
                     <li class="{% if active_tab == 'path_analyzer' %}active{% endif %}"><a href="#">Path Analyzer</a>
                     </li>
