--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -2,18 +2,18 @@
 
 
 
-{% block title %}Fault Analyzer{% endblock %}
+{% block title %}Network Editor{% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="col-sm-3" id="sidebar">
             {% block sidebar %}
-
+                <h1>Sidebar</h1>
             {% endblock %}
         </div>
 
         <div class="col-sm-9" id="content">
-            <div class="col-sm-9">
+            <div class="col-sm-7">
                 <label for="name">Name:</label> <input class='network-name' type="text" value=""
                                                        placeholder="Enter network name">
                 <label for="name">description:</label> <input class='network-description' type="text" value=""
@@ -22,13 +22,6 @@
             </div>
 
             <div class="col-sm-3">
-                <form id="network-form" action='#' class="inline-block" data-id="{{ network_id }}"
-                      data-save-url="{% url 'network_editor:save' %}"
-                      data-update-url="{% url 'network_editor:update' %}" method="post">
-                    {% csrf_token %}
-                    <input type="submit" class="btn btn-sm btn-success" value="Save"/>
-                </form>
-
                 <button type="button" id="load-networks" class="btn btn-primary btn-sm" data-toggle="modal"
                         data-target="#load-network-modal">
                     Load
