--- a/network_editor/templates/network_editor/header.html
+++ b/network_editor/templates/network_editor/header.html
@@ -12,7 +12,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/dtra_logo.png' %}"
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'network_editor/images/dtra_logo.png' %}"
                                                                      height="40px"
                                                                      width="40px" alt="npmt logo"></a>
             </div>
