Adjusting design of fault analyzer sidebar

--- a/fault_analyzer/templates/fault_analyzer/base.html
+++ b/fault_analyzer/templates/fault_analyzer/base.html
@@ -11,11 +11,12 @@
 
     <link rel="stylesheet" href="{% static 'network_editor/leaflet/leaflet.css' %}"/>
     <link rel="stylesheet" href="{% static 'network_editor/sass/application.scss'|compile %}"/>
+    <link rel="stylesheet" href="{% static 'fault_analyzer/sass/application.scss'|compile %}"/>
 
     <title>{% block title %}NPMT{% endblock %}</title>
 </head>
 
-<body class="fault_analyzer">
+<body class="fault-analyzer">
 
 {% include "network_editor/header.html" %}
 
