--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -33,15 +33,16 @@
                                         </div>
                                     </div>
                                     <div class="row row-space">
-                                        <div class="col-sm-12">
-                                            <button class="btn btn-default">Analyze Network</button>
+                                        <div class="col-sm-12 text-center">
+                                            <button class="btn btn-primary">Analyze Network</button>
                                         </div>
                                     </div>
                                     <div class="row row-space">
                                         <div class="col-sm-12">
                                             <div class="panel panel-default">
                                                 <!-- Default panel contents -->
-                                                <div class="panel-heading"><h5>Fault analysis</h5></div>
+                                                <div class="panel-heading"><h5 class="no-margin">Fault analysis</h5>
+                                                </div>
                                                 <div class="panel-body">
                                                     RBCDN Faults:
                                                 </div>
