Fixing sidebar further to look great.

--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -14,12 +14,14 @@
                                 <h4 class="panel-title">
                                     <a role="button" data-toggle="collapse" data-parent="#accordion"
                                        href="#generic-faults-collapse"
-                                       aria-expanded="true" aria-controls="generic-faults-collapse">
+                                       aria-expanded="false" aria-controls="generic-faults-collapse">
                                         Generic Faults
+                                        <span class="pull-right glyphicon glyphicon-chevron-down"
+                                              aria-hidden="true"></span>
                                     </a>
                                 </h4>
                             </div>
-                            <div id="generic-faults-collapse" class="panel-collapse collapse in" role="tabpanel"
+                            <div id="generic-faults-collapse" class="panel-collapse collapse out" role="tabpanel"
                                  aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <div class="row row-space">
