--- a/network_editor/templates/network_editor/index.html
+++ b/network_editor/templates/network_editor/index.html
@@ -67,6 +67,7 @@
         window.network_editor.mode = '{{ mode }}';
         window.network_editor.network = '{{ network }}';
         window.network_editor.edges = '{{ edges }}';
+        window.network_editor.nodes = '{{ nodes }}';
     </script>
     <!-- Modal -->
     {% include 'network_editor/network_modal.html' %}
