Setting fault analyzer load networks modal. Need to load it next.

--- a/fault_analyzer/templates/fault_analyzer/base.html
+++ b/fault_analyzer/templates/fault_analyzer/base.html
@@ -35,7 +35,8 @@
 <script type="text/javascript" src="{% static 'network_editor/leaflet/leaflet.js' %}"></script>
 <script type="text/javascript" src="{% static 'network_editor/leaflet/mercatorConverter.js' %}"></script>
 <script type="text/javascript" src="{% static 'network_editor/leaflet/leafletembed.js' %}"></script>
-{#<script type="text/javascript" src="{% static 'javascripts/view-editor.js' %}"></script>#}
+<script type="text/javascript" src="{% static 'network_editor/javascripts/util.js' %}"></script>
+<script type="text/javascript" src="{% static 'fault_analyzer/javascripts/view-editor.js' %}"></script>
 <script type="text/javascript" src="{% static 'fault_analyzer/javascripts/network-loader.js' %}"></script>
 <script type="text/javascript" src="{% static 'fault_analyzer/javascripts/application.js' %}"></script>
 </body>
