--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -129,9 +129,10 @@
     <script type="text/javascript">
 
         window.network_editor = window.network_editor ? window.network_editor : {};
+        window.network_editor.mode = '{{ mode }}';
         window.network_editor.network = '{{ network }}';
         window.network_editor.edges = '{{ edges }}';
-        window.network_editor.nodes = '{{ edges }}';
+        window.network_editor.nodes = '{{ nodes }}';
     </script>
     <!-- Modal -->
     {% include 'fault_analyzer/network_modal.html' %}
